--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,8 +1,14 @@
-# my global config
+# global config
 global:
   scrape_interval: 15s # Set the scrape interval to every 15 seconds. The default is every 1 minute.
 
 scrape_configs:
+  - job_name: 'monitorPythonserver'
+    static_configs:
+      - targets: ['pythonserver:8080']
+        labels:
+          group: 'monitoring_python'
+
   - job_name: 'node'
     static_configs:
       - targets: ['node-exporter1:9100']
